# civ6-achievements

./: .gitignore  pants.toml  pyproject.toml  wsgi.py
.devcontainer/: Dockerfile  devcontainer.json
civ6_achievements/: __main__.py
infra/: cdk.json  pyproject.toml
src/achievements/: BUILD  main.py  pyproject.toml
src/infra/: app.py  pyproject.toml
src/infra/stacks/: infra_stack.py
src/infra/tests/: test_infra_stack.py
src/infra/util/: env_string_parameter.py
src/script/: package.json  tsconfig.json
src/web/: index.html
src/web/css/: style.css
src/web/js/: main.js
steam_achievements/: __main__.py
