[tool.poetry]
name = "steam-achievements"
version = "0.1.0"
description = ""
authors = ["nzdjb <github@2a1b.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
gunicorn = {extras = ["gevent"], version = "^20.1.0"}
requests = "^2.27.1"
funcy = "^1.17"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
