[tool.poetry]
name = "steam-achievements-infra"
version = "0.1.0"
description = ""
authors = ["nzdjb <github@2a1b.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aws-cdk-lib = "^2.23.0"
constructs = ">=10.0.0,<11.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
